<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login</string>
    <string name="Continue">Continue</string>
    <string name="action_settings">Settings</string>
    <string name="signin">Sign In</string>
    <string name="alReg">Already registered? Log in</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>


</resources>
